[gd_scene load_steps=5 format=2]

[ext_resource path="res://Themes/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/MusicPlayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/UI/Title/Title.gd" type="Script" id=8]
[ext_resource path="res://Scripts/UI/Title/EngineName.gd" type="Script" id=9]

[node name="Title" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 8 )

[node name="EngineName" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -200.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "i wanna go through time"
align = 1
valign = 1
script = ExtResource( 9 )

[node name="Layout" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -80.0
margin_top = -200.0
margin_right = 80.0
margin_bottom = -72.0
custom_constants/separation = 20
__meta__ = {
"_edit_group_": true
}

[node name="StartGame" type="Button" parent="Layout"]
margin_right = 160.0
margin_bottom = 29.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
text = "Start Game"

[node name="Options" type="Button" parent="Layout"]
margin_top = 49.0
margin_right = 160.0
margin_bottom = 78.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
text = "Options"

[node name="Exit" type="Button" parent="Layout"]
margin_top = 98.0
margin_right = 160.0
margin_bottom = 128.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
text = "Exit"

[node name="MusicPlayer" parent="." instance=ExtResource( 2 )]
position = Vector2( 35.3593, 21.3891 )
music = "title"

[connection signal="pressed" from="Layout/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="Layout/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Layout/Exit" to="." method="_on_Exit_pressed"]
